--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "./dist/server.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node server.js",
-    "start:dev": "nodemon server.js"
+    "build": "npx tsc",
+    "start": "node dist/server.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\""
   },
   "keywords": [
     "express",
@@ -16,9 +18,14 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "module-name": "^0.0.1-security",
     "mongoose": "^6.6.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.7.18",
+    "concurrently": "^7.4.0",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.8.3"
   }
 }
