--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "module-name": "^0.0.1-security",
     "mongoose": "^6.6.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
     "concurrently": "^7.4.0",
